Closed Bug 1640816 Opened 6 years ago Closed 6 years ago

The Arial Black font will fallback to Bahnschrift

Categories

(Core :: Layout: Text and Fonts, defect)

78 Branch
x86_64
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox78 --- disabled
firefox79 --- fixed

People

(Reporter: over68, Assigned: jfkthame)

References

Details

Attachments

(1 file)

Steps to reproduce:

  1. Set gfx.e10s.font-list.shared to true.
  2. Restart Firefox.
  3. Download and install the font Pinyin1712.ttf.
  4. Uninstall the font Pinyin1712.ttf.
  5. Open attachment 9100780 [details].
  6. Close and open the page.
  7. If it doesn't reproduce, close and open the page again.

Actual results:

The Arial Black font will fallback to Bahnschrift when close and open the page.

I can also reproduce with attachment 9078073 [details] with the steps in comment 0.

Blocks: 1533462
Severity: -- → S3
Flags: needinfo?(jfkthame)

I'm finding this quite tricky to reproduce, but have seen it a couple of times (out of many, many attempts) -- definitely something unreliable there. Presumably it's related to the fact that installing and removing a font causes us to rebuild the font list, but I'm not yet sure what's getting mixed up.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(jfkthame)

This bug looks like similar to the mentioned issue in bug 1584856 comment 5.

I'm not entirely happy with the resulting behavior, as it still sometimes leads to us using the wrong font after such an uninstallation has happened,

You're right, this does look very much like that -- thanks for reminding me of it. The DirectWrite issue described there could certainly explain the (sporadic) problem we're seeing here.

See Also: → 1584856

It's hard for me to be sure, because reproducing the issue here is very unreliable on my machine, but I think I may have a patch that fixes it. I've started a tryserver build at https://treeherder.mozilla.org/#/jobs?repo=try&revision=a83ab04ab3dc858c5222b99408016da1bf19ef22. If you could test with this build when it's ready, and confirm whether you can still reproduce the bug, that would be really helpful -- thanks!

Flags: needinfo?(over68)

I can not reproduce this bug with the build in comment 5. Thanks.

Flags: needinfo?(over68)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5c1025c06228 Record base font-family name in family alias records. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jfkthame)

This is not preffed-on by default on beta, so the I believe status should be disabled. No need to uplift.

Flags: needinfo?(jfkthame)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: