Bug 1640816 - Record base font-family name in family alias records. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D77909